# open-ppl

./: .gitignore  .gitlab-ci.yml  AbstractBoundingBox_8cpp.html  AbstractBoundingBox_8cpp__incl.map  AbstractBoundingBox_8cpp__incl.md5  AbstractBoundingBox_8h.html  AbstractBoundingBox_8h__dep__incl.map  AbstractBoundingBox_8h__dep__incl.md5  AbstractBoundingBox_8h__incl.map  AbstractBoundingBox_8h__incl.md5  AbstractBoundingBox_8h_source.html  AbstractBoundingSphere_8cpp.html  AbstractBoundingSphere_8cpp__incl.map  AbstractBoundingSphere_8cpp__incl.md5  AbstractBoundingSphere_8h.html  AbstractBoundingSphere_8h__dep__incl.map  AbstractBoundingSphere_8h__dep__incl.md5  AbstractBoundingSphere_8h__incl.map  AbstractBoundingSphere_8h__incl.md5  AbstractBoundingSphere_8h_source.html  AbstractBoundingSphericalShell_8cpp.html  AbstractBoundingSphericalShell_8cpp__incl.map  AbstractBoundingSphericalShell_8cpp__incl.md5  AbstractBoundingSphericalShell_8h.html  AbstractBoundingSphericalShell_8h__dep__incl.map  AbstractBoundingSphericalShell_8h__dep__incl.md5  AbstractBoundingSphericalShell_8h__incl.map  AbstractBoundingSphericalShell_8h__incl.md5  AbstractBoundingSphericalShell_8h_source.html  ActuatorInterface_8cpp.html  ActuatorInterface_8cpp__incl.map  ActuatorInterface_8cpp__incl.md5  ActuatorInterface_8h.html  ActuatorInterface_8h__dep__incl.map  ActuatorInterface_8h__dep__incl.md5  ActuatorInterface_8h__incl.map  ActuatorInterface_8h__incl.md5  ActuatorInterface_8h_source.html  Actuator_8cpp.html  Actuator_8cpp__incl.map  (+4080 more)
docs/: .gitignore  CMakeLists.txt  DocumentationConfig.txt  code_standards
docs/Doxygen/: Doxyfile.in  Doxyfile.internal  Doxyfile.release  MainPage.md  Overview.doc
docs/Overview/: Connectors.tex  Core.tex  DistanceMetrics.tex  Extenders.tex  Introduction.tex  LocalPlanners.tex  MPStrategies.tex  Makefile  MapEvaluators.tex  Metrics.tex  NeighborhoodFinders.tex  PMPLOverview.tex  ParallelMethods.tex  PathModifiers.tex  RegionDecomposition.tex  Samplers.tex  Utilities.tex  ValidityCheckers.tex
docs/ParallelSBMP/: user_guide  user_guide.tex
docs/StandardsAndProcedures/: ExampleClass.cpp  ExampleClass.h  Makefile  procedures.md  standards.md  standards.tex
docs/design-proposal/: Cfg.tex  Connector.tex  DistanceMetric.tex  LocalPlanner.tex  MPScenario.tex  MPStrategy.tex  Makefile  MapEvaluator.tex  NodeGenerator.tex  PMPL-design-proposal.tex  ValidityChecker.tex
docs/node_bundle_prototype/: Makefile  main.cpp
lib/RAPID/: CMakeLists.txt  RAPID.cpp  RAPID.spec  build.cpp  collide.cpp  moments.H  overlap.cpp  sample_client.cpp
lib/gl_visualizer/: .upstream-version  CMakeLists.txt  README
lib/modelloader/: BVHDataLoader.cpp  BVHDataLoader.h  CMakeLists.txt  IModel.cpp  IModel.h  Makefile  ModelFactory.cpp  ModelFactory.h  MovieBYULoader.cpp  MovieBYULoader.h  MovieBYUSaver.h  ObjLoader.cpp  ObjLoader.h  readme.txt
lib/tetgen/: CMakeLists.txt
src/: AStar.h  BasicDefns.h  BasicOBPRM.h  BridgeTest.h  CHANGES  CMakeLists.txt  CSpaceMAPRM.h  CfgTypes.h  Cfg_2D.cpp  Cfg_fixed_tree.cpp  Closest.h  DocumentationConfig.txt  Doxyfile  Error Search  FreeBody.h  GMSPolyhedron.h  GNUmakefile  GNUmakefile.OBPRMdefaults  GNUmakefile.OBPRMobjs  GeneratePartitions.h  Input.cpp  LinearSystem.h  MPProblem.h  Makefile  Makefile.PMPLdefaults  MetaPlanner.h  OBMAPRM.h  OUTPUT.txt  Orientation.cpp  PathFileSearch.txt  QueryCmds.cpp  RandomConnect.h  RegionOverlapMapCombine.h  Roadmap.h  SampleLocations  StateGraphOut  StateGraphOutput.txt  VectorConstantSize.h  Vectors.cpp  Weight.cpp  (+22 more)
src/2DHeterogeneous/: PMPLExamples.xml  Setups  heterogeneous.env  heterogeneous.query  smooth.path
src/2dclutter/: ParallelExample.xml  block.g  clutter.env  clutter.query  robot.g
src/2dmaze/: maze.b2.g  maze.b3.g  maze.env  maze.query  maze.robot.g
src/2dmix/: block.g  inner_0.5.g  inner_1.0.g  inner_2.0.g  inner_2.5.g  mix.env  mix.query  outer.g  robot.g
src/8/: .pathlength.hist  3d-vizmo.env  8-cbs.xml  8-composite.xml  8-decoupled.xml  8-realCBS.xml  MultiRobotExamplesSim.xml  cbs.12345.groupQuery.boxy-0.map  cbs.12345.groupQuery.boxy-0.path  cbs.12345.groupQuery.boxy-0.rdmp.path  cbs.12345.groupQuery.boxy-1.map  cbs.12345.groupQuery.boxy-1.path  cbs.12345.groupQuery.boxy-1.rdmp.path  cbs.12345.groupQuery.boxy-2.map  cbs.12345.groupQuery.boxy-2.path  cbs.12345.groupQuery.boxy-2.rdmp.path  cbs.12345.groupQuery.boxy-3.map  cbs.12345.groupQuery.boxy-3.path  cbs.12345.groupQuery.boxy-3.rdmp.path  cbs.12345.groupQuery.boxy-4.map  cbs.12345.groupQuery.boxy-4.path  cbs.12345.groupQuery.boxy-4.rdmp.path  cbs.12345.groupQuery.boxy-5.map  cbs.12345.groupQuery.boxy-5.path  cbs.12345.groupQuery.boxy-5.rdmp.path  cbs.12345.groupQuery.boxy-6.map  cbs.12345.groupQuery.boxy-6.path  cbs.12345.groupQuery.boxy-6.rdmp.path  cbs.12345.groupQuery.boxy-7.map  cbs.12345.groupQuery.boxy-7.path  cbs.12345.groupQuery.boxy-7.rdmp.path  cbs.12345.groupQuery.pathlength.hist  cbs.12345.groupQuery.stat  cbs.9753126.groupQuery.boxy-0.map  cbs.9753126.groupQuery.boxy-0.path  cbs.9753126.groupQuery.boxy-0.rdmp.path  cbs.9753126.groupQuery.boxy-1.localRepair.path  cbs.9753126.groupQuery.boxy-1.map  cbs.9753126.groupQuery.boxy-1.path  cbs.9753126.groupQuery.boxy-1.rdmp.path  (+38 more)
src/Assignment2/: ProblemDefinition.xml
src/Cfg/: AllPairsNodeConnection.h  Cfg.cpp  Cfg.h  CfgMultiRobot.cpp  CfgMultiRobot.h  CfgReachableVolume.cpp  CfgReachableVolume.h  CfgSurface.cpp  CfgSurface.h  CfgTypes.h  CfgTypes_old.h  Cfg_2D.cpp  Cfg_2D.h  Cfg_2D_withRot.cpp  Cfg_2D_withRot.h  Cfg_fixed_PRR.cpp  Cfg_fixed_PRR.h  Cfg_fixed_tree.cpp  Cfg_fixed_tree.h  Cfg_free.cpp  Cfg_free.h  Cfg_free_multi.cpp  Cfg_free_multi.h  Cfg_free_tree.cpp  Cfg_free_tree.h  Cfg_free_tree_2dof.cpp  Cfg_free_tree_2dof.h  Cfg_reach_cc.cpp  Cfg_reach_cc.h  Cfg_reach_cc_fixed.cpp  Cfg_reach_cc_fixed.h  Cfg_surface.cpp  Cfg_surface.h  ClosestVE.h  DHparameters.cpp  DHparameters.h  ManifoldCfg.cpp  ManifoldCfg.h  SSSurface.cpp  SSSurface.h  (+8 more)
src/Communication/: Communicator.cpp  Communicator.h  Publisher.cpp  Publisher.h  Subscriber.cpp  Subscriber.h
(+28301 files in other folders)
